k8s/manifests/user/network-system/static-routes/brother-printer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app printer
  namespace: network-system
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: http
      port: 80
  externalName: brw90324b175a70
