k8s/manifests/user/network-system/static-routes/brother-printer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: printer
  namespace: network-system
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "monitor-share"
    hajimari.io/appName: "printer"

spec:
  ingressClassName: "nginx"
  tls:
    hosts:
      - &host "printer.${EXTERNAL_DOMAIN}"

  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: printer
                port:
                  name: https
